# swritor

./: .gitignore  CHANGELOG.md  README.md  cargo-check-output.txt  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
scripts/: sync-template.js
src/: App.tsx  main.tsx  mdui.d.ts  styles.css
src-tauri/: .env.simple.env  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  commands.rs  deploy.rs  error.rs  lib.rs  main.rs  models.rs  shell_fetcher.rs  sites.rs  state.rs  template_fetcher.rs
src/components/: HomePage.tsx
src/components/ExistingBlog/: DirectorySelect.tsx  ExistingBlogPage.tsx  FileTreeView.tsx  index.ts
src/components/InitBlog/: ConfigForm.tsx  DirectoryStep.tsx  InitBlogPage.tsx  ProgressPanel.tsx  index.ts
src/components/auth/: LoginDialog.tsx  RegisterDialog.tsx
src/components/common/: Button.tsx  Input.tsx  LogPanel.tsx  Select.tsx  WindowShell.tsx  index.ts
src/components/deploy/: DeployButton.tsx
src/components/layout/: AppSidebar.tsx
src/components/settings/: AlbumSettings.tsx  FirstTimeSetupDialog.tsx  PersonalSettingsForm.tsx
src/hooks/: index.ts  useAuth.tsx  useLogStream.ts  useTauriCommand.ts
src/pages/: Albums.tsx  ControlCenter.tsx  PostEditor.tsx  PostList.tsx  Settings.tsx
src/types/: index.ts
src/utils/: configParser.ts  error.ts  index.ts  timezone.ts
