[package]
name = "swritor"
version = "0.2.1"
description = "Swritor - 创作•管理•分享"
authors = ["Spage Team"]
edition = "2021"

[lib]
name = "s_writor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
flate2 = "1"
tar = "0.4"
dotenvy = "0.15"
json_comments = "0.2"
spage-scaffold = { git = "https://github.com/Suzichen/spage.git", subdirectory = "crates/spage-scaffold" }
spage-engine = { git = "https://github.com/Suzichen/spage.git", subdirectory = "crates/spage-engine" }
tauri-plugin-store = "2"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3.27.0"
